--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,9 +2,9 @@
 <resources>
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#037AEE</color>
+    <color name="colorAccent">#7ccce5</color>
     <color name="yellow">#fde567</color>
     <color name="green">#c1da59</color>
     <color name="red">#ec4c2a</color>
-    <color name="blue">#7ccce5</color>
+    <color name="blue">#034AEE</color>
 </resources>
