--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="green">#c1da59</color>
     <color name="red">#ec4c2a</color>
     <color name="blue">#034AEE</color>
+    <color name="black">#000000</color>
 </resources>
