--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -3,6 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/layoutLg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="com.jorgeprieto.Ui.LoginActivity">
@@ -21,7 +22,7 @@
             android:orientation="horizontal"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintGuide_percent="0.5"
+            app:layout_constraintGuide_percent="0.39"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -47,7 +48,7 @@
             android:orientation="horizontal"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintGuide_percent="0.80"
+            app:layout_constraintGuide_percent="0.72"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -56,7 +57,25 @@
             android:orientation="horizontal"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintGuide_percent="0.9"
+            app:layout_constraintGuide_percent="0.83"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+    <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/gHor7"
+            android:orientation="horizontal"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintGuide_percent="0.84"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+    <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/gHor8"
+            android:orientation="horizontal"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintGuide_percent="0.94"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -156,6 +175,19 @@
             app:layout_constraintEnd_toStartOf="@id/gVer5"
             app:layout_constraintStart_toEndOf="@id/gVer7"
             app:layout_constraintTop_toBottomOf="@id/gHor5"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnGoogleLg"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:text="@string/loginGoogle"
+            style="@style/loginScreenButtonGoogle"
+            app:layout_constraintBottom_toTopOf="@id/gHor8"
+            app:layout_constraintEnd_toStartOf="@id/gVer5"
+            app:layout_constraintStart_toEndOf="@id/gVer1"
+            app:layout_constraintTop_toBottomOf="@id/gHor7"
+            android:drawableStart="@drawable/googleg_standard_color_18" android:paddingLeft="16dp"/>
+
     <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
