--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,6 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/layoutLg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="com.jorgeprieto.Ui.LoginActivity">
@@ -59,6 +60,25 @@
             app:layout_constraintGuide_percent="0.8"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
+
+    <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/gHor7"
+            android:orientation="horizontal"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintGuide_percent="0.84"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+    <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/gHor8"
+            android:orientation="horizontal"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintGuide_percent="0.91"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
 
     <androidx.constraintlayout.widget.Guideline
             android:id="@+id/gVer1"
@@ -147,15 +167,28 @@
 
 
     <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnRegisterLg"
+        android:id="@+id/btnRegisterLg"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:text="@string/register"
+        style="@style/loginScreenButton"
+        app:layout_constraintBottom_toTopOf="@id/gHor6"
+        app:layout_constraintEnd_toStartOf="@id/gVer5"
+        app:layout_constraintStart_toEndOf="@id/gVer7"
+        app:layout_constraintTop_toBottomOf="@id/gHor5"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnGoogleLg"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:text="@string/register"
-            style="@style/loginScreenButton"
-            app:layout_constraintBottom_toTopOf="@id/gHor6"
+            android:text="@string/loginGoogle"
+            style="@style/loginScreenButtonGoogle"
+            app:layout_constraintBottom_toTopOf="@id/gHor8"
             app:layout_constraintEnd_toStartOf="@id/gVer5"
-            app:layout_constraintStart_toEndOf="@id/gVer7"
-            app:layout_constraintTop_toBottomOf="@id/gHor5"/>
+            app:layout_constraintStart_toEndOf="@id/gVer1"
+            app:layout_constraintTop_toBottomOf="@id/gHor7"
+            android:drawableStart="@drawable/googleg_standard_color_18" android:paddingLeft="16dp"/>
+
     <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -166,6 +199,7 @@
             android:layout_marginTop="10dp"
             android:id="@+id/txtEmail"
             app:layout_constraintTop_toTopOf="@+id/gHor2" android:hint="@string/email"/>
+
     <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
