--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,4 +16,10 @@
         <item name="android:textSize">28sp</item>
         <item name="android:textStyle">italic</item>
     </style>
+    <style name="loginScreenButtonGoogle">
+        <item name="android:background">@color/white</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textStyle">italic</item>
+    </style>
 </resources>
