Mapa Y Lista Implementados De Forma Básica

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,20 +5,24 @@
 
     <group android:checkableBehavior="single">
         <item
-                android:id="@+id/nav_gallery"
+                android:id="@+id/MusseumList"
                 android:icon="@drawable/ic_menu_gallery"
                 android:title="@string/menu_gallery"/>
         <item
-                android:id="@+id/nav_slideshow"
+                android:id="@+id/Map"
                 android:icon="@drawable/ic_menu_slideshow"
-                android:title="@string/menu_slideshow"/>
+                android:title="@string/map"/>
+        
+        <item
+                android:id="@+id/checkTickets"
+                android:icon="@drawable/ic_menu_slideshow"
+                android:title="@string/check_tickets"/>
+
         <item
                 android:id="@+id/User"
                 android:icon="@drawable/ic_menu_camera"
                 android:title="@string/menu_user"/>
-        <item
-                android:id="@+id/checkTickets"
-                android:icon="@drawable/ic_menu_slideshow"
-                android:title="@string/menu_slideshow"/>
+
+
     </group>
 </menu>
