--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,7 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/mobile_navigation"
-            app:startDestination="@+id/nav_gallery">
+            app:startDestination="@+id/MusseumList">
 
     <fragment
             android:id="@+id/User"
@@ -12,19 +12,19 @@
             tools:layout="@layout/fragment_user"/>
 
     <fragment
-            android:id="@+id/nav_gallery"
-            android:name="com.jorgeprieto.ui.gallery.GalleryFragment"
+            android:id="@+id/MusseumList"
+            android:name="com.jorgeprieto.ui.MusseumList.MusseumListFragment"
             android:label="@string/menu_gallery"
-            tools:layout="@layout/fragment_gallery"/>
+            tools:layout="@layout/fragment_musseum_list"/>
 
     <fragment
-            android:id="@+id/nav_slideshow"
-            android:name="com.jorgeprieto.ui.slideshow.SlideshowFragment"
-            android:label="@string/menu_slideshow"
-            tools:layout="@layout/fragment_slideshow"/>
+            android:id="@+id/Map"
+            android:name="com.jorgeprieto.ui.Map.MapFragment"
+            android:label="@string/map"
+            tools:layout="@layout/fragment_map"/>
 
     <fragment android:id="@+id/checkTickets"
               android:name="com.jorgeprieto.ui.CheckTickets.CheckTicketsFragment"
-              android:label="fragment_check_tickets"
+              android:label="check_tickets"
               tools:layout="@layout/fragment_check_tickets"/>
 </navigation>
