--- a/app/src/main/res/layout/fragment_musseum_list.xml
+++ b/app/src/main/res/layout/fragment_musseum_list.xml
@@ -13,21 +13,8 @@
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent" android:orientation="horizontal">
 
-        <SearchView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:id="@+id/searchField"
-        />
-
-        <Button
-                android:id="@+id/btShort"
-                android:layout_width="wrap_content"
-                android:text="FILTER"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"/>
 
     </LinearLayout>
 
