--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,8 @@
 <resources>
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimary">@color/green</item>
+        <item name="colorPrimaryDark">@color/yellow</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
@@ -14,6 +14,12 @@
         <item name="android:background">@color/yellow</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">28sp</item>
+        <item name="android:textStyle">italic</item>
+    </style>
+    <style name="musseumDetailButtom">
+        <item name="android:background">@color/yellow</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">18sp</item>
         <item name="android:textStyle">italic</item>
     </style>
     <style name="loginScreenButtonGoogle">
