--- a/app/src/main/res/layout/fragment_check_tickets.xml
+++ b/app/src/main/res/layout/fragment_check_tickets.xml
@@ -16,5 +16,18 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/btnScanner"/>
+    <TextView
+            android:text="TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/txtQrInfo"
+
+            app:layout_constraintBottom_toTopOf="@+id/btnScanner" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"/>
+    <TextView
+            android:text="TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/txtResultQr"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/btnScanner"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
